// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog > Dialog.vue should renders OXD Dialog > Dialog 1`] = `
<transition-stub>
  <div role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
    <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
    <div class="oxd-dialog-container-default">
      <div class="oxd-dialog-container-default--inner">
        <div class="oxd-sheet oxd-sheet--rounded oxd-sheet--gutters oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow" role="document"><button class="oxd-dialog-close-button d-flex align-center justify-center oxd-dialog-close-button-position"><i class="oxd-icon bi-x oxd-icon-button__icon oxd-dialog-close-button-icon" flow="top"></i></button></div>
      </div>
    </div>
  </div>
</transition-stub>
`;

exports[`Dialog > Dialog.vue should renders OXD Dialog > Dialog dialogContainer-div 1`] = `
<transition-stub>
  <div role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
    <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
    <div>
      <div class="oxd-sheet oxd-sheet--rounded oxd-sheet--gutters oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow" show="true" role="document"><button class="oxd-dialog-close-button d-flex align-center justify-center oxd-dialog-close-button-position"><i class="oxd-icon bi-x oxd-icon-button__icon oxd-dialog-close-button-icon" flow="top"></i></button></div>
    </div>
  </div>
</transition-stub>
`;

exports[`Dialog > Dialog.vue should renders OXD Dialog > Dialog no shadow 1`] = `
<transition-stub>
  <div role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
    <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
    <div class="oxd-dialog-container-default">
      <div class="oxd-dialog-container-default--inner">
        <div class="oxd-sheet oxd-sheet--rounded oxd-sheet--gutters oxd-sheet--white oxd-dialog-sheet" show="true" role="document"><button class="oxd-dialog-close-button d-flex align-center justify-center oxd-dialog-close-button-position"><i class="oxd-icon bi-x oxd-icon-button__icon oxd-dialog-close-button-icon" flow="top"></i></button></div>
      </div>
    </div>
  </div>
</transition-stub>
`;

exports[`Dialog > Dialog.vue should renders OXD Dialog > Dialog persistent 1`] = `
<transition-stub>
  <div role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
    <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
    <div class="oxd-dialog-container-default">
      <div class="oxd-dialog-container-default--inner">
        <div class="oxd-sheet oxd-sheet--rounded oxd-sheet--gutters oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow" show="true" role="document"><button class="oxd-dialog-close-button d-flex align-center justify-center oxd-dialog-close-button-position"><i class="oxd-icon bi-x oxd-icon-button__icon oxd-dialog-close-button-icon" flow="top"></i></button></div>
      </div>
    </div>
  </div>
</transition-stub>
`;

exports[`Dialog > Dialog.vue should renders OXD Dialog > Dialog show 1`] = `
<transition-stub>
  <div role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
    <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
    <div class="oxd-dialog-container-default">
      <div class="oxd-dialog-container-default--inner">
        <div class="oxd-sheet oxd-sheet--rounded oxd-sheet--gutters oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow" show="true" role="document"><button class="oxd-dialog-close-button d-flex align-center justify-center oxd-dialog-close-button-position"><i class="oxd-icon bi-x oxd-icon-button__icon oxd-dialog-close-button-icon" flow="top"></i></button></div>
      </div>
    </div>
  </div>
</transition-stub>
`;

exports[`Dialog > Dialog.vue should renders OXD Dialog > Dialog witout close 1`] = `
<transition-stub>
  <div role="dialog" class="oxd-overlay oxd-overlay--flex oxd-overlay--flex-centered">
    <!--
    :aria-labelledby="'dialogTitle_' + id"
    :aria-describedby="'dialogDesc_' + id"
    -->
    <div class="oxd-dialog-container-default">
      <div class="oxd-dialog-container-default--inner">
        <div class="oxd-sheet oxd-sheet--rounded oxd-sheet--gutters oxd-sheet--white oxd-dialog-sheet oxd-dialog-sheet--shadow" show="true" role="document"></div>
      </div>
    </div>
  </div>
</transition-stub>
`;
